--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="config.js"></script>
     <script src="project-integration.js"></script>
+    <script src="image-calculator.js"></script>
 </head>
 <body>
     <div id="app">
@@ -33,6 +34,55 @@
                 <h3>👥 Team Workload</h3>
                 <div id="collaborators-list" class="collaborators-container">
                     <!-- Collaborators will be rendered here -->
+                </div>
+            </div>
+
+            <!-- Image Calculator Section -->
+            <div class="image-calculator-section">
+                <h3>📐 Image Calculator</h3>
+                <div class="calculator-container">
+                    <!-- Image Upload Area -->
+                    <div class="image-upload-area" id="image-upload-area">
+                        <input type="file" id="image-input" accept="image/*" multiple style="display: none;">
+                        <div class="upload-placeholder" onclick="document.getElementById('image-input').click()">
+                            <div class="upload-icon">📷</div>
+                            <p>Click to upload images</p>
+                            <small>PNG, JPG, GIF up to 10MB</small>
+                        </div>
+                    </div>
+
+                    <!-- Images Grid -->
+                    <div id="images-grid" class="images-grid" style="display: none;">
+                        <!-- Uploaded images will appear here -->
+                    </div>
+
+                    <!-- Calculator Controls -->
+                    <div class="calculator-controls">
+                        <div class="calc-row">
+                            <label>Measurement Type:</label>
+                            <select id="measurement-type">
+                                <option value="area">Area (px²)</option>
+                                <option value="perimeter">Perimeter (px)</option>
+                                <option value="dimensions">Dimensions (W×H)</option>
+                                <option value="color-analysis">Color Analysis</option>
+                            </select>
+                        </div>
+
+                        <div class="calc-row">
+                            <label>Scale Factor:</label>
+                            <input type="number" id="scale-factor" value="1" step="0.1" min="0.1">
+                            <span class="unit-label">px/unit</span>
+                        </div>
+
+                        <button id="calculate-btn" class="btn-primary" disabled>
+                            🧮 Calculate
+                        </button>
+                    </div>
+
+                    <!-- Results Display -->
+                    <div id="calculation-results" class="calculation-results" style="display: none;">
+                        <!-- Results will appear here -->
+                    </div>
                 </div>
             </div>
         </div>
