Replace image calculator with CEO Dashboard - shows deliverables reports, team performance, and project analytics

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="config.js"></script>
     <script src="project-integration.js"></script>
-    <script src="image-calculator.js"></script>
+    <script src="ceo-dashboard.js"></script>
 </head>
 <body>
     <div id="app">
@@ -37,51 +37,65 @@
                 </div>
             </div>
 
-            <!-- Image Calculator Section -->
-            <div class="image-calculator-section">
-                <h3>📐 Image Calculator</h3>
-                <div class="calculator-container">
-                    <!-- Image Upload Area -->
-                    <div class="image-upload-area" id="image-upload-area">
-                        <input type="file" id="image-input" accept="image/*" multiple style="display: none;">
-                        <div class="upload-placeholder" onclick="document.getElementById('image-input').click()">
-                            <div class="upload-icon">📷</div>
-                            <p>Click to upload images</p>
-                            <small>PNG, JPG, GIF up to 10MB</small>
+            <!-- CEO Dashboard Section -->
+            <div class="ceo-dashboard-section">
+                <h3>📊 CEO Dashboard</h3>
+                <div class="dashboard-container">
+                    <!-- Quick Stats -->
+                    <div class="stats-grid">
+                        <div class="stat-card">
+                            <div class="stat-number" id="total-deliverables">-</div>
+                            <div class="stat-label">Total Deliverables</div>
+                        </div>
+                        <div class="stat-card">
+                            <div class="stat-number" id="completed-deliverables">-</div>
+                            <div class="stat-label">Completed</div>
+                        </div>
+                        <div class="stat-card">
+                            <div class="stat-number" id="in-progress-deliverables">-</div>
+                            <div class="stat-label">In Progress</div>
+                        </div>
+                        <div class="stat-card">
+                            <div class="stat-number" id="overdue-deliverables">-</div>
+                            <div class="stat-label">Overdue</div>
                         </div>
                     </div>
 
-                    <!-- Images Grid -->
-                    <div id="images-grid" class="images-grid" style="display: none;">
-                        <!-- Uploaded images will appear here -->
+                    <!-- Progress Chart -->
+                    <div class="progress-section">
+                        <h4>📈 Project Progress</h4>
+                        <div class="progress-bar">
+                            <div class="progress-fill" id="progress-fill" style="width: 0%"></div>
+                        </div>
+                        <div class="progress-text">
+                            <span id="progress-percentage">0%</span> Complete
+                        </div>
                     </div>
 
-                    <!-- Calculator Controls -->
-                    <div class="calculator-controls">
-                        <div class="calc-row">
-                            <label>Measurement Type:</label>
-                            <select id="measurement-type">
-                                <option value="area">Area (px²)</option>
-                                <option value="perimeter">Perimeter (px)</option>
-                                <option value="dimensions">Dimensions (W×H)</option>
-                                <option value="color-analysis">Color Analysis</option>
-                            </select>
+                    <!-- Team Performance -->
+                    <div class="team-performance">
+                        <h4>👥 Team Performance</h4>
+                        <div id="team-performance-list">
+                            <!-- Team performance will be rendered here -->
                         </div>
+                    </div>
 
-                        <div class="calc-row">
-                            <label>Scale Factor:</label>
-                            <input type="number" id="scale-factor" value="1" step="0.1" min="0.1">
-                            <span class="unit-label">px/unit</span>
+                    <!-- Recent Activity -->
+                    <div class="recent-activity">
+                        <h4>🕒 Recent Activity</h4>
+                        <div id="recent-activity-list">
+                            <!-- Recent activity will be rendered here -->
                         </div>
+                    </div>
 
-                        <button id="calculate-btn" class="btn-primary" disabled>
-                            🧮 Calculate
+                    <!-- Action Buttons -->
+                    <div class="ceo-actions">
+                        <button id="generate-report-btn" class="btn-primary">
+                            📋 Generate Report
                         </button>
-                    </div>
-
-                    <!-- Results Display -->
-                    <div id="calculation-results" class="calculation-results" style="display: none;">
-                        <!-- Results will appear here -->
+                        <button id="export-data-btn" class="btn-secondary">
+                            📤 Export Data
+                        </button>
                     </div>
                 </div>
             </div>
