Final CEO Dashboard implementation with complete deploy guide and testing

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="https://miro.com/app/static/sdk/v2/miro.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="config.js"></script>
+    <script src="miro-sdk-v2-improved.js"></script>
     <script src="project-integration.js"></script>
     <script src="ceo-dashboard.js"></script>
 </head>
