--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
     <title>Project Deliverables Dashboard</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://miro.com/app/static/sdk/v2/miro.js"></script>
